styling web app header

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* ___________________________________ */
+/* Basic setup */
+/* ___________________________________ */
+
 *{
     margin: 0;
     padding: 0;
@@ -12,18 +16,18 @@ html{
     text-rendering: optimizeLegibility;
 }
 
+
+/* ___________________________________ */
+/* Reusable Components */
+/* ___________________________________ */
+
+
 .row{
     max-width: 1140px;
     margin: 0 auto;
-    background-color: yellowgreen;
 }
 
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
-    background-position: center;
-    height: 100vh;
-    background-size: cover;
-}
+/*______ Headings ______ */
 
 h1{
     margin-top: 0;
@@ -36,13 +40,7 @@ h1{
     word-spacing: -4px;
 }
 
-.hero-text-box{
-    position: absolute;
-    width: 1140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+/*______ Buttons ______ */
 
 .btn:link,
 .btn:visited{
@@ -82,4 +80,57 @@ h1{
 .btn-ghost:active{
     border: 1px solid #e67e22;
     color: #fff;
+}
+
+/* ___________________________________ */
+/* Header */
+/* ___________________________________ */
+
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-position: center;
+    height: 100vh;
+    background-size: cover;
+}
+
+
+.hero-text-box{
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    margin-top: 55px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px,0;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.5s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #e67e22;
 }
