--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,74 @@ html{
     margin: 0 auto;
 }
 
+section{
+    padding: 80px 0;
+}
+.box{
+    padding: 1%;
+}
+
 /*______ Headings ______ */
+
+h1,
+h2,
+h3{
+    font-weight: 300;
+    text-transform: uppercase;
+}
 
 h1{
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
+    word-spacing: 4px;
     letter-spacing: 1px;
-    word-spacing: -4px;
 }
+
+h2{
+    font-size: 180%;
+    text-align: center;
+    word-spacing: 2px;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+h3{
+    font-size: 110%;
+    margin-bottom: 15px;
+}
+
+h2:after{
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 200px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+/*_______Paragraphs_______*/
+.long-copy{
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+}
+
+.box p{
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/*______ Icons ______ */
+.icon-big{
+    font-size: 300%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 30px;
+}
+
 
 /*______ Buttons ______ */
 
@@ -73,12 +129,12 @@ h1{
 
 .btn-full:hover,
 .btn-full:active{
-    border: 1px solid #e67e22;
+    border: 1px solid #cf6d17;
    }
 
 .btn-ghost:hover,
 .btn-ghost:active{
-    border: 1px solid #e67e22;
+    border: 1px solid #cf6d17;
     color: #fff;
 }
 
