--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,45 @@ header{
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
 }
+
+/* ___________________________________ */
+/* FEATURES */
+/* ___________________________________ */
+.section-features .long-copy{
+    margin-bottom: 30px;
+}
+
+
+/* ___________________________________ */
+/* MEALS */
+/* ___________________________________ */
+.section-meals{
+    padding: 0;
+}
+.meals-showcase {
+    list-style: none;
+    width: 100%;
+}
+
+.meals-showcase li{
+    display: block;
+    float: left;
+    width: 25%;
+}
+.meal-photo{
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: black;
+}
+.meal-photo img{
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+.meal-photo img:hover{
+    opacity: 1;
+    transform: scale(1.03);
+}
