--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ header{
     background-position: center;
     height: 100vh;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 
@@ -283,7 +284,7 @@ header{
     padding-right: 3%;
     margin-top: 30px;
 }
-.steps-box:last-child {
+.steps-box:last-of-type {
     padding-left: 3%;
     margin-top: 70px;
 }
@@ -332,3 +333,44 @@ header{
     width: 100%;
     margin-bottom: 15px;
 }
+
+/* ___________________________________ */
+/* TESTIMONIALS */
+/* ___________________________________ */
+.customer-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -3px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
