--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,8 @@ a:active {
 /*______ BUTTONS ______ */
 
 .btn:link,
-.btn:visited{
+.btn:visited,
+input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -146,7 +147,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited{
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: white;
@@ -154,18 +156,21 @@ a:active {
 }
 
 .btn-ghost:link,
-.btn-ghost:visited{
+.btn-ghost:visited {
     border: 1px solid #e67e22;
     color: #e67e22;
 }
 
 .btn:hover,
-.btn:active{
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #cf6d17 ;
 }
 
 .btn-full:hover,
-.btn-full:active{
+.btn-full:active,
+input[type=submit] {
     border: 1px solid #cf6d17;
    }
 
@@ -392,7 +397,7 @@ cite img {
 }
 
 .plan-box div {
-    padding: 5px;
+    padding: 15px;
     border: 1px solid #e8e8e8;
 }
 
@@ -429,4 +434,102 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+/* ___________________________________ */
+/* FORM */
+/* ___________________________________ */
+
+.contact-form {
+        width: 60%;
+        margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {outline: none;}
+
+
+/* ___________________________________ */
+/* FOOTER */
+/* ___________________________________ */
+
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;  
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0 ;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+} 
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 170%;
+}
+
+.fb:hover {
+    color: #3b5998;
+}
+.twitter:hover {
+    color: #00aced;
+}
+.google:hover {
+    color: #dd4b39;
+}
+.ig:hover {
+    color: #c13584;
+}
+
+footer p {
+    color: #888;
 }
